--- a/.harness/cicd_kk.yaml
+++ b/.harness/cicd_kk.yaml
@@ -46,3 +46,42 @@ pipeline:
                     envVariables:
                       DOCKER_USERNAME: karthikeyanmcloud
                       DOCKER_PASSWORD: VIkram@94
+    - stage:
+        name: Deploy
+        identifier: Deploy
+        description: ""
+        type: Deployment
+        spec:
+          deploymentType: Kubernetes
+          service:
+            serviceRef: service
+          environment:
+            environmentRef: env_kk
+            deployToAll: false
+            infrastructureDefinitions:
+              - identifier: infra_kk
+          execution:
+            steps:
+              - step:
+                  name: Rollout Deployment
+                  identifier: rolloutDeployment
+                  type: K8sRollingDeploy
+                  timeout: 10m
+                  spec:
+                    skipDryRun: false
+                    pruningEnabled: false
+            rollbackSteps:
+              - step:
+                  name: Rollback Rollout Deployment
+                  identifier: rollbackRolloutDeployment
+                  type: K8sRollingRollback
+                  timeout: 10m
+                  spec:
+                    pruningEnabled: false
+        tags: {}
+        failureStrategies:
+          - onFailure:
+              errors:
+                - AllErrors
+              action:
+                type: StageRollback
